# hammy

./: pyproject.toml  readme.md
src/hammy/: __init__.py  __main__.py  __main__.pyi
src/hammy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
stubs/imagequant/: __init__.pyi
stubs/pyperclip/: __init__.pyi
